--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>travel</artifactId>
     <name>travel</name>
     <packaging>war</packaging>
-    <version>1.0.0-BUILD-SNAPSHOT</version>
+    <version>1.0.0</version>
     <properties>
         <java-version>1.6</java-version>
         <org.springwebflow-version>2.2.1.RELEASE</org.springwebflow-version>
